--- a/app/src/components/Lists/Lists.css
+++ b/app/src/components/Lists/Lists.css
@@ -10,6 +10,7 @@ h1{
     padding: 1vw;
     margin: 3vw;
     border-color: transparent;
+    margin-bottom: 5vw;
     border-radius: 30px;
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
