--- a/app/src/components/header_footer/Header.css
+++ b/app/src/components/header_footer/Header.css
@@ -1,3 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;  
+}
+
 .Containerheader {
     background-color: #FEC5BB;
+}
+
+.logoTambo{
+    width: 18vw;
+    margin: 1vw;
 }
