--- a/app/src/components/header_footer/Footer.css
+++ b/app/src/components/header_footer/Footer.css
@@ -18,13 +18,32 @@
     top: 100vh;
 }
 
+
+.Containerfot {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+    margin-top: 300px; 
+    width: 100%;
+}
+
+
+@media only screen and (max-width: 380px) {
+    /*mobile phones */
+    .Containerfot {
+    margin-top: 100px; 
+    }
+}
+
 .Containerfooter img {
-    margin: 4rem
+    margin: 1rem
 }
 
 .Containerfooter h3 {
     margin-bottom: 1px;
     font-family: Ribeye;
+    font-size: 15px;
 }
 
 .devContainer{
