--- a/app/src/components/Lists/Lists.css
+++ b/app/src/components/Lists/Lists.css
@@ -24,11 +24,24 @@ h1{
     border-color: #FEC89A;
     border-width: 3px;
 }
-
-#modal{
+.modalWindows{
+    width: 95vw;
+    height: 95vh;
+    position: relative;
+    margin: auto;
+    display: none;
+    border: 20px solid #FEC89A;
+}
+.activeModal{
+    display: flex;
+}
+.divModal{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100%;
-    top: 21vw;
-    left:0;
-    position: absolute;
+    padding: 4vh;
+    justify-content: space-around;
+    align-items: center;
+    overflow-y: scroll;
 }
